--- a/PyL1.ipynb
+++ b/PyL1.ipynb
@@ -206,8 +206,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8c21e86c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ali Raza\n"
+     ]
+    }
+   ],
+   "source": [
+    "name=\"ali raza\"\n",
+    "print(name.title())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f08ddb43",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ALI RAZA\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(name.upper())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb44387d",
    "metadata": {},
    "outputs": [],
    "source": []
