--- a/PyL1.ipynb
+++ b/PyL1.ipynb
@@ -469,12 +469,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "d2ea0f71",
    "metadata": {},
    "outputs": [],
    "source": [
-    "|"
+    "x=bin(10) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "dc8fc0a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0b1010'"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "a5ddfb9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# False,None\n",
+    "# 0,0.0,0j\n",
+    "# \"\"\n",
+    "# {},[],()\n",
+    "# set()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6fdada7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#python type conversion \n"
    ]
   }
  ],
