--- a/PyW2.ipynb
+++ b/PyW2.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "product_info={\"id\":5,\"name\":\"laptop\",\"key\":986748}"
+    "prodextension ct_info={\"id\":5,\"name\":\"laptop\",\"key\":986748}"
    ]
   },
   {
@@ -38,8 +38,8 @@
    ],
    "source": [
     "marks=78\n",
-    "result= \"pass\" if marks>39 and marks<101 else \"fail\" if marks>-1 and marks<40 else \"invalid\"\n",
-    "print(result)"
+    "resextension lt= \"pass\" if marks>39 and marks<101 else \"fail\" if marks>-1 and marks<40 else \"invalid\"\n",
+    "print(resextension lt)"
    ]
   },
   {
@@ -65,12 +65,188 @@
     }
    ],
    "source": [
-    "user=[\"um\",\"ahmad\",\"qasim\",\"abdullah\"]\n",
+    "extension ser=[\"extension m\",\"ahmad\",\"qasim\",\"abdullah\"]\n",
     "x=0\n",
     "while x<len(user):\n",
     "    if len(user[x])>2:\n",
     "        print(user[x].title())\n",
     "    x+=1        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Qasab\n",
+      "Abdullab\n"
+     ]
+    }
+   ],
+   "source": [
+    "user=[\"um\",\"ahmad\",\"qasab\",\"abdullab\"]\n",
+    "x=0\n",
+    "while x<len(user):\n",
+    "    if user[x].endswith(\"ab\"):\n",
+    "        print(user[x].title())\n",
+    "    x+=1\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "username=\"\"\n",
+    "domain=\"\"\n",
+    "extension=\"\"\n",
+    "x=\"ammad@apple.com\"\n",
+    "i=0\n",
+    "while i<x.index(\"@\"):\n",
+    "    username=username+x[i]     \n",
+    "        \n",
+    "    i+=1\n",
+    "i+=1\n",
+    "while i<len(x):\n",
+    "    domain=domain+x[i]     \n",
+    "    if x[i]==\".\":\n",
+    "        y=i+1    \n",
+    "    i+=1\n",
+    "\n",
+    "while y<len(x):\n",
+    "    extension =extension +x[y]     \n",
+    "        \n",
+    "    y+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ammad'"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "username"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'apple.com'"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "domain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'com'"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "extension "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user=[]\n",
+    "\n",
+    "i=0\n",
+    "while i<5:\n",
+    "    x=input(\"enter name:\")\n",
+    "    user.append(x)\n",
+    "    i+=1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ammad', 'ali', 'ahmed', 'akhtar', 'asgar']"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user={\"a\":10,\"b\":20}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "b\n"
+     ]
+    }
+   ],
+   "source": [
+    "for data in user:\n",
+    "    print(data)"
    ]
   },
   {
